# nllb-tryout

./: .gitignore  README.md  config.py  corpus.py  downloadtatoeba.py  environment.yaml  evaluate.py  experiment_nllb_tatoeba.ipynb  gronings bert practice.py  main.py  multilanguage train.ipynb  overfitting investigation 20250125-182707.csv  overfitting investigation 20250202-115506.csv  overfitting investigation 20250209-120618.csv  pyproject.toml  tokenizer_and_model_setup.py  tokenizer_setup.py  train.py  tryout.py
checkpoints/: .gitignore
checkpoints/nllb-200-distilled-600M-nld-gos-deu-20260503-145514/: run_config.json  run_config.txt
checkpoints/nllb-200-distilled-600M-nld-gos-deu-eng-spa-20260606-151511/: run_config.json  run_config.txt
notebooks/: experiment_nllb_tatoeba.ipynb  multilanguage train.ipynb
notebooks/checkpoints/: .gitignore
notebooks/checkpoints/nllb-200-distilled-600M-nld-gos-20260307-134042/: run_config.json  run_config.txt
notebooks/checkpoints/nllb-200-distilled-600M-nld-gos-20260405-105525/: run_config.json  run_config.txt
notebooks/checkpoints/nllb-200-distilled-600M-nld-gos-20260405-135830/: run_config.json  run_config.txt
notebooks/output/evaluate/: evaluation_results_20250910-162353.csv  evaluation_results_20250917-161740.csv  evaluation_results_20251121-123632.csv  evaluation_results_20251128-205251.csv  evaluation_results_20251129-171320.csv  evaluation_results_20251207-131212.csv  evaluation_results_20260115-190039.csv  evaluation_results_20260125-193033.csv  evaluation_results_20260205-174141.csv  evaluation_results_20260211-151035.csv
sidetracks/: check frequent Dutch and German words in tatoeba.py  dict.tsv  dict_clean.tsv  diverse_arbitrary_keyword.ipynb  gronings bert practice.py  gronings_voorbeeldzinnen.json  hogelandster_waarkwoorden.csv  search tatoeba.py  spell check.py  test_gos_gpt2.py  train_gos_transfer.py  tsvdebug.py  word_frequencies.txt
sidetracks/gos-transfer-gpt2/: config.json  generation_config.json  merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
sidetracks/synthdata/: hogelandster waarkwoorden synthetic sentences.py
src/: config.py  evaluate.py  main.py
src/nllb_try/: __init__.py  artifacts.py  augmentation.py  config.py  corpus.py  csv_list_loader.py  downloadtatoeba.py  evaluate.py  main.py  seed.py  tokenizer_and_model_setup.py  train.py  tryout.py
(+8 files in other folders)
