[project]
name = "nllb_try"
version = "0.3.1"
description = "NLLB Gronings Tatoeba Translation Machine"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch",
    "torchvision",
    "transformers",
    "pandas",
    "tqdm",
    "matplotlib",
    "sacrebleu",
    "scikit-learn",
    "sentencepiece",
    "accelerate",
    "requests",
    "sacremoses"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
