[project]
name = "nllb_try"
version = "0.4.3"
description = "NLLB Gronings Tatoeba Translation Machine"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch",
    "transformers",
    "pandas",
    "tqdm",
    "matplotlib",
    "sacrebleu",
    "scikit-learn",
    "sentencepiece",
    "accelerate",
    "requests",
    "sacremoses"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
