[project]
name = "nllb_try"
version = "0.5.0"
description = "NLLB Gronings Tatoeba Translation Machine"
requires-python = ">=3.10,<3.15,!=3.13.8"
dependencies = [
    "torch",
    "transformers",
    "pandas",
    "tqdm",
    "matplotlib",
    "sacrebleu",
    "scikit-learn",
    "sentencepiece",
    "accelerate",
    "requests",
    "sacremoses"
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
notebook = [
    "ipykernel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = {torch = false}

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
